# adxl345

./: .editorconfig  .gitignore  .travis.yml  Makefile  Makefile.am  Makefile.in  README.md  adxl345.c  config.h.in  configure  configure.ac
